# albus

./: .commitlintrc.js  .editorconfig  .env.dist  .eslintrc  .gitbook.yaml  .gitignore  .npmrc  .release-it.js  Anchor.toml  CHANGELOG.md  Cargo.toml  Makefile  README.md  SECURITY.md  eslint.config.js  kinobi.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  tsconfig.base.json  tsconfig.json  vite.config.ts  vitest.config.ts
.anchor/test-ledger/: faucet-keypair.json  genesis.tar.bz2  test-ledger-log.txt  validator-keypair.json  vote-account-keypair.json
.anchor/test-ledger/rocksdb/: 000082.sst  000083.sst  000084.sst  000085.sst  000086.sst  000087.sst  000088.sst  IDENTITY  LOG  (+2 more)
.changeset/: config.json
.github/workflows/: audit.yml  deploy-albus.yml  deploy.yml  release-core.yml  release-sdk.yml  release-stake-pool-sdk.yml  release-swap-sdk.yml  release-transfer-sdk.yml  release.yml  test.yml
bellman/: Cargo.toml
bellman/src/: main.rs
circuits/: age.circom  age.sym  age.wasm  age.zkey  agePolicy.circom  ageProof.circom  countryPolicy.circom  encryptionProof.circom  europe.circom  europe.r1cs  europe.wasm  merkleProof.circom  shamirsSecretSharing.circom
circuits/encryption/: poseidon.circom  poseidon_constants.circom  shared_key.circom
circuits/test/: encryptionProof.circom
circuits/tree/: state_tree.circom  update_smt.circom
circuits/utils/: date.circom  ecdh.circom  shamirSecretSharing.circom  verify_eddsa.circom  verify_signature.circom
client/: Cargo.toml
client/src/: circuit.rs  main.rs
crates/albus-client/: CONTRIBUTING.md  Cargo.toml  README.md
crates/albus-client/src/: lib.rs
crates/client/: Cargo.toml
crates/client/circuits/: europe.wtns
crates/client/src/: cluster.rs  main.rs  nft.rs  zkp.rs
crates/client/src/tmp/: age.rs  cube.rs  eur.rs  is_europe.rs  main-old.rs  mod.rs
crates/groth16-solana/: Cargo.toml
crates/solana-verifier/: Cargo.toml
crates/zkutil/: Cargo.toml
docs/: cli.md  cryptography.md  did.md  identity.md  integration.md  links.md  misc.md  sdk.md  todo.md  vc.md
docs/gitbook-sync/: README.md  SUMMARY.md  albus-architecture.md  albus-cli.md  aml-officer.md  data-retention-compliance.md  data-security.md  digital-cred.md  example.md  features.md  glossary.md  integration.md  reference-list.md  self-sovereign-identity.md  use-cases.md  user-workflows.md  why-albus.md
groth16/: Cargo.toml
groth16/src/: lib.rs  verifier.rs
patches/: @sphereon__pex@3.3.1.patch
programs/albus/: Cargo.toml
programs/albus-stake-pool/: Cargo.toml
programs/albus-swap/: Cargo.toml
programs/albus-swap/src/: constraints.rs  errors.rs  lib.rs  state.rs  utils.rs
programs/albus-swap/src/curve/: base.rs  calculator.rs  constant_price.rs  constant_product.rs  fees.rs  offset.rs
programs/albus-transfer/: Cargo.toml
programs/albus-transfer/src/: lib.rs
programs/albus/src/: allocator.rs  constants.rs  error.rs  errors.rs  events.rs  lib.rs  state.rs  utils.rs  verification.rs
programs/albus/src/instructions/: add_service_provider.rs  admin.rs  create_circuit.rs  create_investigation_request.rs  create_policy.rs  create_proof_request.rs  create_service_provider.rs  create_trustee.rs  create_zkp_request.rs  delete_account.rs  delete_circuit.rs  delete_policy.rs  delete_proof_request.rs  delete_service_provider.rs  delete_trustee.rs  delete_zkp_request.rs  mint_credential.rs  mod.rs  prove.rs  reveal_secret_share.rs  update_circuit_vk.rs  update_service.rs  update_trustee.rs  verify.rs  verify_proof_request.rs
programs/albus/src/instructions/admin/: close_account.rs  mod.rs  withdraw.rs
programs/albus/src/instructions/circuit/: create_circuit.rs  delete_circuit.rs  mod.rs  update_circuit_vk.rs
programs/albus/src/instructions/credential/: create_credential.rs  create_credential_spec.rs  delete_credential.rs  delete_credential_request.rs  delete_credential_spec.rs  mint_credential.rs  mod.rs  request_credential.rs  revoke_credential.rs  update_credential.rs  update_credential_request.rs
programs/albus/src/instructions/credential/account/: create_credential.rs  delete_credential.rs  update_credential.rs
programs/albus/src/instructions/credential/nft/: update_credential.rs
programs/albus/src/instructions/investigation/: create_investigation_request.rs  delete_investigation_request.rs  mod.rs  reveal_secret_share.rs
programs/albus/src/instructions/issuer/: create_issuer.rs  delete_issuer.rs  mod.rs  update_issuer.rs
programs/albus/src/instructions/policy/: create_policy.rs  delete_policy.rs  mod.rs  update_policy.rs
programs/albus/src/instructions/proof_request/: create_proof_request.rs  delete_proof_request.rs  mod.rs  prove_proof_request.rs  update_proof_request.rs  verify_proof_request.rs
programs/albus/src/instructions/service_provider/: create_service_provider.rs  mod.rs  update_service_provider.rs
programs/albus/src/instructions/trustee/: create_trustee.rs  delete_trustee.rs  mod.rs  update_trustee.rs  verify_trustee.rs
programs/albus/src/utils/: account.rs  assert.rs  circuit.rs  mod.rs  nft.rs  random_util.rs
programs/verified_stake/: Cargo.toml
programs/verified_stake_pool/: Cargo.toml
programs/verified_swap/: Cargo.toml
programs/verified_swap/src/: lib.rs
programs/verified_transfer/: Cargo.toml
programs/verified_transfer/src/: albus.rs  lib.rs
src/: constants.ts  types.ts  zkp.ts
src/crypto/: EdDSAPoseidonSigner.ts  index.ts
src/utils/: circom.ts  proof.ts
tests/: albus.ts  package.json  tsconfig.json  utils.ts  verifiedStakePool.spec.ts  verifiedStakePool.ts  verifiedTransfer.spec.ts  verifiedTransfer.ts  vitest.config.ts
tests/fixtures/: age.wasm  agePolicy.vk.json  agePolicy.wasm  attendanceProof.vk.json  attendanceProof.wasm  livenessProof.vk.json  livenessProof.wasm
tests/src/: albus-stake-pool.spec.ts  albus-swap.spec.ts  albus-transfer.spec.ts  albus.spec.ts  circuit.spec1.ts  credential-request.spec.ts  credential.spec.ts  credentialRequest.spec.ts  utils.ts  verifiedStakePool.spec.ts  verifiedStakePool.spec1.ts  verifiedTransfer.spec1.ts
(+41 files in other folders)
