[workspace]
resolver = "2"
members = [
    "programs/*",
    "packages/solana-verifier",
    "packages/groth16-solana",
]

[workspace.package]
edition = "2021"
version = "0.0.0"
authors = ["Albus Team"]
repository = "https://github.com/mfactory-lab/albus"
homepage = "https://albus.finance"
license = "AGPL-3.0"
publish = false

[workspace.dependencies]
albus-solana-verifier = { path = "packages/solana-verifier" }
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
groth16-solana = { path = "packages/groth16-solana" }
solana-program = "*"
solana-security-txt = { version = "1.1.1" }

[profile.release]
lto = "fat"
codegen-units = 1
overflow-checks = true

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
