[package]
name = "groth16"
version = "0.0.1"
edition = "2021"

[dependencies]
pairing = "0.22"
bellman = { version = "0.13.0", optional = true }
rand_core = { version = "0.6", default-features = false }
ff = "0.12"

[dev-dependencies]
bls12_381 = "0.7"
bellman = "0.13.0"
rand = "0.8"

[features]
std = ["bellman"]
default = []
