[package]
description = "Albus rust client"
name = "albus_client"
version = "0.0.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/mfactory-lab/albus/crates/albus_client"
documentation.workspace = true
homepage.workspace = true
keywords = [
  "albus",
  "zk",
  "solana",
  "blockchain"
]
readme = "README.md"

[features]
anchor = [ "dep:anchor-lang" ]
test-sbf = []
serde = [
  "dep:serde",
  "dep:serde_with"
]

[dependencies]
anchor-lang = { workspace = true, optional = true }
borsh = "^0.10"
num-derive = "^0.3"
num-traits = "^0.2"
serde = { version = "^1.0", features = [ "derive" ], optional = true }
serde_with = { version = "^3.0", optional = true }
solana-program = "~1.18"
thiserror = "^1.0"

[dev-dependencies]
assert_matches = "1.5.0"
solana-program-test = "~1.18"
solana-sdk = "~1.18"
