[package]
name = "albus"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "^1.0"
clap = { version = "^4.1", features = ["derive", "env"] }
rand = "^0.8"
serde = { version = "1.0", features = [ "serde_derive" ] }
serde_json = "1.0"
reqwest = { version = "0.11", features = [ "rustls-tls", "json" ] }

# logging
env_logger = "0.10"
log = "0.4"

# crypto
ark-circom = { git = "https://github.com/gakonst/ark-circom.git", default-features = false, features = [ "circom-2" ] }
#ark-circom = { path = "../arc-circom", default-features = false, features = [ "circom-2" ] }


#ark-groth16 = "0.3.0"

ark-bn254 = "0.3.0"
ark-ec = "0.3.0"
ark-ff = "0.3.0"
ark-groth16 = { version = "0.3", default-features = false, features = [ "std", "parallel", "r1cs" ]}
ark-serialize = "0.3.0"

bellman_ce = { version = "0.3.5", default-features = false }
#zkutil = { path = "../zkutil" }

# solana
#mpl-token-metadata = { version = "1.9.1", default-features = false, features = [ "no-entrypoint", "serde-feature"] }
# TODO: 1.15 error https://github.com/solana-labs/solana/issues/29971
#solana-program = "1.14"
#solana-sdk = "1.14"
#solana-sdk = { git = "https://github.com/vadorovsky/solana", branch = "alt-bn128-fix-inference" }
#solana-program = { git = "https://github.com/vadorovsky/solana", branch = "alt-bn128-fix-inference" }
#solana-client = { git = "https://github.com/vadorovsky/solana", branch = "alt-bn128-fix-inference" }
#solana-client = "1.15"

#[patch.crates-io]
#solana-sdk = { git = "https://github.com/vadorovsky/solana", branch = "alt-bn128-fix-inference" }
#solana-program = { git = "https://github.com/vadorovsky/solana", branch = "alt-bn128-fix-inference" }
#solana-program = { version = "1.14", git = "https://github.com/solana-labs/solana", rev = "d02dac2413a4970cd6b3def65a8085d7e27901be" }
