[package]
name = "albus-swap"
version = "0.0.4"
homepage = "https://albus.finance"
repository = "https://github.com/mfactory-lab/albus"
license = "AGPL-3.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
production = []
devnet = []
testing = []
fuzz = ["arbitrary", "roots"]

[dependencies]
albus-solana-verifier = { path = "../../packages/solana-verifier" }
anchor-lang = { version = "0.29.0" }
anchor-spl = { version = "0.29.0" }
arrayref = "0.3.6"
solana-program = "^1.16"
spl-math = { version = "0.2", features = ["no-entrypoint"] }
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
arbitrary = { version = "1.3", features = ["derive"], optional = true }
roots = { version = "0.0.8", optional = true }

[dev-dependencies]
proptest = "1.3"
roots = "0.0.8"
