[package]
name = "albus-swap"
version = "0.0.6"
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
crate-type = [
  "cdylib",
  "lib"
]

[features]
idl-build = [
  "anchor-lang/idl-build",
  "anchor-spl/idl-build"
]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = [ "no-entrypoint" ]
production = []
mainnet = []
devnet = []
testing = []
fuzz = [
  "arbitrary",
  "roots"
]

[dependencies]
albus-solana-verifier.workspace = true
# workspace version does not work with solita
anchor-lang = { version = "0.29.0" }
anchor-spl = { version = "0.29.0", features = [ "token" ], default-features = false }
arrayref = "0.3.6"
solana-program.workspace = true
spl-math = { version = "0.2", features = [ "no-entrypoint" ] }
spl-token = { version = "4.0.0", features = [ "no-entrypoint" ] }
arbitrary = { version = "1.3", features = [ "derive" ], optional = true }
roots = { version = "0.0.8", optional = true }

[dev-dependencies]
proptest = "1.3"
roots = "0.0.8"
