[package]
name = "albus-transfer"
version = "0.0.3"
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
devnet = []
testing = []

[dependencies]
albus-solana-verifier.workspace = true
anchor-lang.workspace = true
anchor-spl = { workspace = true, features = ["associated_token", "token", "token_2022", "token_2022_extensions"] }
