[package]
name = "albus"
version = "0.0.20"
description = "Albus Protocol on-chain program"
homepage = "https://albus.finance"
repository = "https://github.com/mfactory-lab/albus"
license = "AGPL-3.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
verify-on-chain = ["groth16-solana"]
testing = ["verify-on-chain"]
devnet = ["verify-on-chain"]

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", default-features = false, features = ["token", "associated_token"] }
groth16-solana = { path = "../../packages/groth16-solana", optional = true }
mpl-token-metadata = "3.1.0"
solana-program = "*"

