[package]
name = "albus"
version = "0.0.27"
description = "Albus Protocol on-chain program"
edition = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]

[features]
custom-heap = ["cfg-if", "static_assertions", "linked_list_allocator"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
verify-on-chain = ["groth16-solana", "custom-heap"]
testing = ["verify-on-chain"]
devnet = ["verify-on-chain"]
mainnet = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", default-features = false, features = ["token", "associated_token", "metadata"] }
groth16-solana = { workspace = true, optional = true }
solana-program = { workspace = true }
solana-security-txt = { workspace = true }

# custom allocator
static_assertions = { version = "1.1.0", optional = true  }
linked_list_allocator = { version = "0.10.5", optional = true }
cfg-if = { version = "1.0.0", optional = true  }

