[package]
name = "verified-swap"
version = "0.0.1"
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = { version = "0.27.0"}
spl-token-swap = { version = "3.0.0", features = ["no-entrypoint"]}
albus-verifier = "0.1.0"
