[package]
name = "verified-transfer"
version = "0.0.1"
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = { version = "0.27.0"}
anchor-spl = { version = "0.27.0" }
albus = { path = "../albus", features = ["no-entrypoint"] }
